// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`daily data works 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`exchangeRates data works 1`] = `
Object {
  "ask_price": null,
  "bid_price": null,
  "exchange_rate": "Float",
  "from_currency_code": "String",
  "from_currency_name": "String",
  "last_refreshed": "Timestamp",
  "time_zone": "String",
  "to_currency_code": "String",
  "to_currency_name": "String",
}
`;

exports[`exchangeTimeSeries data works 5min 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Timestamp",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "interval": "Interval",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`intraday data works 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Timestamp",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "interval": "Interval",
  "last_refreshed": "Timestamp",
  "output_size": "String",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`monthly data works 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "last_refreshed": "Timestamp",
  "time_zone": "String",
  "to_symbol": "String",
}
`;

exports[`weekly data works 1`] = `
Object {
  "data": Array [
    Object {
      "close": "Float",
      "date": "Date",
      "high": "Float",
      "low": "Float",
      "open": "Float",
    },
  ],
  "from_symbol": "String",
  "information": "String",
  "last_refreshed": "Timestamp",
  "time_zone": "String",
  "to_symbol": "String",
}
`;
